# shipguard

./: .dockerignore  .env.example  .env.staging.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pre-commit-config.yaml.template  .pre-commit-hooks.yaml  .reposec-precommit.yml  .reposec.yml  .shipguard-precommit.yml  .shipguard.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  action.yml  docker-compose.staging.yml  pyproject.toml
.github/workflows/: layer4_ai.yml  publish.yml  release.yml  security.yml  test.yml
.project-hooks/: pre-commit
.shipguard/ai_cache/: cache.db
docs/: MODERNIZATION_PLAN.md  MODERNIZATION_STRATEGY.md  PRODUCTION_READINESS.md  REVIEW.md  SENTINEL_BREAKDOWN.md  SENTINEL_FAQ.md  TEST_EXPANSION_PLAN.md
rust/reposec-secrets/: Cargo.toml
rust/reposec-secrets/src/: main.rs
rust/shipguard-core/: Cargo.toml
rust/shipguard-core/src/: lib.rs
scripts/: go_live_staging.sh
src/reposec/: __init__.py  cli.py  config.py  engine.py  rust_secrets.py
src/shipguard/: __init__.py  ai.py  cli.py  config.py  db.py  engine.py  fixer.py  mcp_server.py  models.py  rust_secrets.py  semantic.py
src/shipguard/formatters/: __init__.py  agent.py  json_fmt.py  markdown.py  sarif.py  terminal.py
src/shipguard/integrations/: __init__.py  semgrep.py  shellcheck.py  trivy.py  trufflehog.py
src/shipguard/rules/: __init__.py  config.py  github_actions.py  javascript.py  python.py  secrets.py  shell.py  supply_chain.py
tests/: conftest.py  test_action_security.py  test_cli.py  test_cli_contract.py  test_concurrency.py  test_config_compatibility.py  test_config_extra.py  test_engine.py  test_engine_extra.py  test_fixer.py  test_formatters_extra.py  test_formatters_sarif.py  test_golden_snapshots.py  test_integration_minirepo.py  test_integrations_semgrep.py  test_integrations_shellcheck.py  test_integrations_trivy.py  test_integrations_trufflehog.py  test_models_extra.py  test_mutation_harness.py  test_parser_robustness.py  test_performance_regression.py  test_property_based.py  test_rule_dispatch.py  test_rules_config.py  test_rules_github_actions.py  test_rules_javascript.py  test_rules_python.py  test_rules_registry_extra.py  test_rules_secrets.py  test_rules_shell.py  test_rules_supply_chain.py  test_rust_python_parity.py  test_rust_secrets.py  test_scan_staged.py
tests/fixtures/.shipguard/: state.db
tests/fixtures/python/: dead_code.py  semantic_test.py
tests/fixtures/secrets/: safe.yml  vulnerable.yml
tests/fixtures/supply_chain/: safe.docker-compose.yml  vulnerable.docker-compose.yml
tests/snapshots/: format_json.snap  format_markdown 2.snap  format_markdown.snap  format_terminal.snap
